--- a/css/style.css
+++ b/css/style.css
@@ -145,11 +145,7 @@ footer {
   width: 100%;
   background-color: #191923;
   padding-top: 5em;
-  padding-bottom: 1em;
-  background-image: url(../images/App%20icon%20design.png);
-  background-size: 300px;
-  background-repeat: no-repeat;
-  background-position: bottom right; }
+  padding-bottom: 1em; }
   footer * {
     color: #FDFFFC; }
   footer .social {
@@ -168,9 +164,12 @@ footer {
   footer a:hover {
     text-decoration: none;
     color: #FB6542; }
-
-.fp {
-  text-align: right; }
+  footer .footer-logo {
+    height: 3em; }
+  footer .footer-title {
+    font-weight: bold;
+    margin: 10px 0 0 0;
+    font-family: "Roboto", sans-serif; }
 
 .form input,
 .form textarea {
@@ -376,5 +375,10 @@ nav {
 
   .desktop-m {
     display: flex; } }
+@media only screen and (max-width: 990px) {
+  #logo {
+    display: block;
+    margin: 0 auto;
+    z-index: -999; } }
 
 /*# sourceMappingURL=style.css.map */
